Updating stuff (I'm back yay)