@@ -9,6 +9,7 @@ public final class SlotClientSynced {
     private SlotClientSynced() {}
 
     public static volatile boolean DEBUG = false;
+    public static volatile boolean USE_MONEY = true;
     public static volatile List<Integer> BET_VALUES = null;
     public static volatile int MODE1 = 1;
     public static volatile int MODE2 = 3;
@@ -18,13 +19,17 @@ public final class SlotClientSynced {
         return BET_VALUES != null && !BET_VALUES.isEmpty();
     }
 
-    public static void apply(boolean debug, int[] betValues, int mode1, int mode2, int mode3) {
+    public static void apply(boolean debug, boolean useMoney, int[] betValues, int mode1, int mode2, int mode3) {
         DEBUG = debug;
+        USE_MONEY = useMoney;
+
         List<Integer> list = new ArrayList<>(betValues.length);
         for (int v : betValues) if (v > 0) list.add(v);
         Collections.sort(list);
 
-        BET_VALUES = Collections.unmodifiableList(list);
+        list = list.stream().distinct().toList();
+        BET_VALUES = List.copyOf(list);
+
         MODE1 = Math.max(1, mode1);
         MODE2 = Math.max(1, mode2);
         MODE3 = Math.max(1, mode3);
